@@ -21,6 +21,13 @@ a list of files that are changed, or all files in case of a null dump.
 It also handles files that are removed, allowing for correct incremental 
 backups. All paths printed are absolute.
 .PP
+If the \fItimestamp\fR option is not given, all paths founds are
+printed. Only when a \fItimestamp\fR file is given, times can be
+compared and an incremental output can be generated.
+
+The \fIFILELIST\fR is stored, be default, in `@sysconfdir@/rdup'. See
+the \fB\-e\fR option on how to change this.
+.PP
 \fBrdup\fR prints a filelist to standard output. 
 Subsequent programs in a pipe line can be used to actually
 implement to backup scheme. If FILELIST is empty or non existant all
@@ -349,6 +356,10 @@ a tool the implement bandwidth shaping (for remote backups).
 .TP
 .B o dirsplit 
 split a directory into DVD sized volumes for easy burning.
+
+.SH FILES
+\fBrdup\fR uses `@sysconfdir@/rdup' as directory where the timestamp
+and filelist files are put.
 
 .SH AUTHOR
 Written by Miek Gieben. 
