@@ -1,0 +1,85 @@
+Yo,
+
+heb nog niet alles kunnen testen, maar alvast een paar vraagjes/opmerkingen :)
+
+* NAME komt niet terug in de BACKUP_DIR dus..
+
+bramk@koon:~$ sudo dump.sh -z TESTRDUP /home/bramk/testRdup/
+bramk@koon:~$ sudo dump.sh -z TESTRDUP2 /home/bramk/testRdup/
+
+... geeft ...
+
+bramk@koon:/vol/backup/koon/200605/home/bramk/testRdup$ ls -l
+total 16
+-rw-r--r-- 1 bramk bramk  3 2006-05-08 23:01 testme.txt
+-rw-r--r-- 1 bramk bramk 23 2006-05-08 22:54 testme.txt+08.22:54
+
+.. en dit overgens zonder dat ik testme.txt gewijzigd heb?
+
+
+* Wel of geen -z switch wordt ge-ignored als er geen diff is dus..
+
+bramk@koon:~$ sudo dump.sh -z TESTRDUP /home/bramk/testRdup/ 
+bramk@koon:~$ file /vol/backup/koon/200605/home/bramk/testRdup/testme.txt
+/vol/backup/koon/200605/home/bramk/testRdup/testme.txt: gzip compressed data, from Unix
+
+
+bramk@koon:~$ sudo dump.sh TESTRDUP /home/bramk/testRdup/ 
+bramk@koon:~$ file /vol/backup/koon/200605/home/bramk/testRdup/testme.txt
+/vol/backup/koon/200605/home/bramk/testRdup/testme.txt: gzip compressed data, from Unix
+
+... Hoe bepaal je uberhaupt dat je moet unzippen bij de restore? Ik neem aan dat ik als sysadmin moet 'onthouden' dat ik met -z heb ge-backuped? Ik neem aan dat dit issue ook bij -k gaat optreden.
+
+
+* elke dag een full dump??
+
+if [[ ! -d "$BACKUPDIR_DATE/$1" ]]; then
+        # kill the timestamp and inc list
+        mkdir -m 755 -p "$BACKUPDIR_DATE"
+        rm -f "$LIST"
+        rm -f "$STAMP"
+        _echo2 "Full dump"
+
+
+* heo zie je een delete?
+
+bramk@koon:~$ ls -l testRdup
+total 4
+-rw-r--r-- 1 bramk bramk 5 2006-05-08 23:22 testme.txt
+bramk@koon:~$ sudo dump.sh TESTRDUP /home/bramk/testRdup/
+bramk@koon:~$ touch testRdup/testme2.txt
+bramk@koon:~$ sudo dump.sh TESTRDUP /home/bramk/testRdup/
+bramk@koon:~$ ls -l /vol/backup/koon/200605/home/bramk/testRdup/testme
+testme2.txt  testme.txt
+bramk@koon:~$ rm testRdup/testme2.txt
+bramk@koon:~$ sudo dump.sh TESTRDUP /home/bramk/testRdup/
+bramk@koon:~$ ls -l /vol/backup/koon/200605/home/bramk/testRdup/testme
+testme2.txt+08.23:43  testme.txt
+bramk@koon:~$ sudo restore.sh -t outdir /vol/backup/koon/
+bramk@koon:~$ ls -l outdir/vol/backup/koon/200605/home/bramk/testRdup/testme
+testme2.txt  testme.txt
+
+
+Ik zou testme2.txt hier niet verwachten aangezien deze er gedurende de laatste backup niet meer was?
+
+
+Als ik het goed begrijp doe je nu per dag een directory en daarbinnen gewijzigde files met een timestamp -extensie. Waarom niet gewoon een dir per backup/diff? Het voelt alsof je nu twee dingen door elkaar gebruikt. Dus.. wat ik nu zo denk
+
+* NAME opnemen in backup path / andere NAME is andere backup
+* volledige hostname gebruiken
+* subdir per timestamp
+
+
+Ik begrijp er zeker geen hol van :D
+
+later,
+Bram
+
+
+
+
+
+
+
+
+
