@@ -119,6 +119,7 @@ autoconf || error_cleanup "Autoconf failed."
 rm -r autom4te* || error_cleanup "Failed to remove autoconf cache directory."
 rm -rf patches  || error_cleanup "Failed to remove patches directory."
 #rm -rf poster   || error_cleanup "Failed to remove poster directory."
+rm -rf feedback   || error_cleanup "Failed to remove feedback directory."
 
 find . -name .c-mode-rc.el -exec rm {} \;
 find . -name .cvsignore -exec rm {} \;
