@@ -1,6 +1,8 @@
 xx May 2006: 0.2.12 Miek <miek@miek.nl>
   -- small bugfixes --
    * dump.sh, restore.sh: add -a flag
+   * dump.sh: fix a bug in detecting whether to do a
+     full or an incremental dump (Bram de Kruijff)
    * mirror.sh, rorrim.sh: silence chown errors
    * mirror.sh, rorrim.sh: echo to >&2 
    * mirror.sh, dump.sh: completed extended attribute support
@@ -9,6 +11,7 @@ xx May 2006: 0.2.12 Miek <miek@miek.nl>
    * rdup, msg() fixlet
    * doc: added quick-start tex document for SANE
    * doc: poster/ directory was added for SANE
+   * doc: more updates (Bram de Kruijff)
 
 
 05 May 2006: 0.2.11 Miek <miek@miek.nl>
